fixed styles on mobile view

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -127,7 +127,7 @@
     justify-content: center;
     align-items: center;
     border-radius: 30px;
-    gap: 20px;
+    gap: 10px;
     width: 100%;
     height: 80%;
     box-shadow: 0px 24px 32px -8px rgba(0, 0, 0, 0.08);
@@ -140,7 +140,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    gap: 20px;
+    gap: 10px;
 }
 
 #result-text {
